--- a/Tracking/Base.lproj/Main.storyboard
+++ b/Tracking/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W2h-od-kUY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G12a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="W2h-od-kUY">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -34,9 +34,9 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnQ-Rn-GCO">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnQ-Rn-GCO" customClass="GraphView" customModule="Tracking" customModuleProvider="target">
                                                 <rect key="frame" x="66" y="295" width="301" height="135"/>
-                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="backgroundColor" red="1" green="0.89505105563258569" blue="0.046734653439690521" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speed" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQX-wX-uAy">
                                                 <rect key="frame" x="8" y="301" width="50" height="21"/>
@@ -53,7 +53,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dp9-xD-yCU" customClass="TimeView" customModule="Tracking" customModuleProvider="target">
                                                 <rect key="frame" x="90" y="438" width="200" height="200"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8O-15-zFv">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8O-15-zFv">
                                                         <rect key="frame" x="53" y="61" width="94" height="78"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -75,7 +75,7 @@
                                                         <color key="value" red="0.62200498361204049" green="0.78830072714649846" blue="0.90588235859999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="counter">
-                                                        <integer key="value" value="2"/>
+                                                        <real key="value" value="0.0"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
@@ -105,7 +105,7 @@
                                                         <color key="value" red="0.78100961538461533" green="0.0073116210957880718" blue="0.0" alpha="0.80013469827586203" colorSpace="calibratedRGB"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="counter">
-                                                        <real key="value" value="50"/>
+                                                        <real key="value" value="0.0"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
@@ -176,7 +176,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="4z6-6v-TFL">
                             <connections>
                                 <action selector="showActivityView:" destination="BYZ-38-t0r" id="FTT-E2-fL9"/>
-                                <segue destination="3sK-uy-D0e" kind="modal" identifier="showActivity" id="QEV-5D-Pq7"/>
+                                <segue destination="3sK-uy-D0e" kind="presentation" identifier="showActivity" id="QEV-5D-Pq7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -263,7 +263,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j1B-oP-hwD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2559.5" y="-371.5"/>
+            <point key="canvasLocation" x="1932.5" y="-413.5"/>
         </scene>
         <!--Activity-->
         <scene sceneID="xzj-dX-mdY">
@@ -369,7 +369,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QpJ-Yx-2cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3469.5" y="-371.5"/>
+            <point key="canvasLocation" x="3129.5" y="-413.5"/>
         </scene>
         <!--Goals-->
         <scene sceneID="yuG-4l-PmF">
@@ -385,12 +385,23 @@
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" momentary="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2jb-w8-LYf">
                                 <rect key="frame" x="20" y="87" width="335" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="335" id="1sD-Cg-lMd"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="335" id="RZd-6v-2yH"/>
+                                    <constraint firstAttribute="height" constant="31" id="UcY-HG-twY"/>
+                                </constraints>
                                 <segments>
                                     <segment title="Total"/>
                                     <segment title="Week"/>
                                     <segment title="Month"/>
                                 </segments>
                                 <color key="tintColor" red="1" green="0.0" blue="0.0093617555427760735" alpha="1" colorSpace="calibratedRGB"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1sD-Cg-lMd"/>
+                                        <exclude reference="RZd-6v-2yH"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <action selector="segmentActionController:" destination="qnJ-Ig-ODc" eventType="valueChanged" id="n2L-HW-b5c"/>
                                 </connections>
@@ -430,7 +441,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCE-Ey-k46">
+                            <pickerView tag="-1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCE-Ey-k46">
                                 <rect key="frame" x="0.0" y="161" width="375" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="1o5-Uf-JMr"/>
@@ -463,7 +474,9 @@
                             <constraint firstItem="rCE-Ey-k46" firstAttribute="top" secondItem="FSh-XQ-89s" secondAttribute="bottom" constant="5" id="Vmp-Qc-fQf"/>
                             <constraint firstItem="Zrq-eH-MVO" firstAttribute="leading" secondItem="m5L-FL-9X6" secondAttribute="leading" constant="120" id="Vq1-Zr-jGB"/>
                             <constraint firstItem="ASO-fv-Mqq" firstAttribute="leading" secondItem="m5L-FL-9X6" secondAttribute="leadingMargin" constant="227" id="YGF-54-DlK"/>
+                            <constraint firstItem="rCE-Ey-k46" firstAttribute="top" secondItem="Kwn-BP-uTv" secondAttribute="bottom" constant="97" id="fIS-jZ-R8p"/>
                             <constraint firstItem="2jb-w8-LYf" firstAttribute="top" secondItem="Kwn-BP-uTv" secondAttribute="bottom" constant="23" id="fsh-1d-oXr"/>
+                            <constraint firstItem="rCE-Ey-k46" firstAttribute="centerX" secondItem="m5L-FL-9X6" secondAttribute="centerX" id="i4T-dg-SUM"/>
                             <constraint firstItem="Zrq-eH-MVO" firstAttribute="top" secondItem="rCE-Ey-k46" secondAttribute="bottom" constant="5" id="iQG-Hr-J7L"/>
                             <constraint firstItem="FSh-XQ-89s" firstAttribute="top" secondItem="2jb-w8-LYf" secondAttribute="bottom" constant="17" id="k9o-g7-dHs"/>
                             <constraint firstItem="rjW-eg-sOx" firstAttribute="leading" secondItem="m5L-FL-9X6" secondAttribute="leading" id="qnU-bC-bQ7"/>
@@ -480,7 +493,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jhA-PD-9u5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2519.5" y="1188.5"/>
+            <point key="canvasLocation" x="1932.5" y="1208.5"/>
         </scene>
         <!--Add Activity -->
         <scene sceneID="5Ph-WT-jdL">
@@ -515,7 +528,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32D-Of-3Sx">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="712"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv3-4q-df0">
                                                 <rect key="frame" x="120" y="77" width="135" height="21"/>
@@ -523,7 +536,7 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ek-dx-eYN">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0,00/21 Km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ek-dx-eYN">
                                                 <rect key="frame" x="110" y="151" width="155" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -541,7 +554,7 @@
                                                     <action selector="sliderActionForTime:" destination="yD2-Xn-xuI" eventType="valueChanged" id="OpL-Y4-uid"/>
                                                 </connections>
                                             </slider>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="214" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TU-Ra-7Tg">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="214" text="0.00/6 Hour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TU-Ra-7Tg">
                                                 <rect key="frame" x="110" y="256" width="155" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -554,7 +567,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="imageForUser" translatesAutoresizingMaskIntoConstraints="NO" id="lDF-1Z-YD3">
-                                                <rect key="frame" x="60" y="399" width="255" height="148"/>
+                                                <rect key="frame" x="60" y="399" width="255" height="193"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0U3-ia-wbj">
                                                 <rect key="frame" x="162" y="312" width="51" height="21"/>
@@ -657,7 +670,7 @@
                             <constraint firstItem="r9h-Zt-YtK" firstAttribute="leading" secondItem="OZs-hb-36M" secondAttribute="leading" id="9eq-QW-53e"/>
                             <constraint firstItem="32D-Of-3Sx" firstAttribute="width" secondItem="OZs-hb-36M" secondAttribute="width" id="Aad-zk-5h0"/>
                             <constraint firstAttribute="trailing" secondItem="r9h-Zt-YtK" secondAttribute="trailing" id="BpN-BF-cg1"/>
-                            <constraint firstItem="32D-Of-3Sx" firstAttribute="height" secondItem="OZs-hb-36M" secondAttribute="height" id="Cd6-5E-kwN"/>
+                            <constraint firstItem="32D-Of-3Sx" firstAttribute="height" secondItem="OZs-hb-36M" secondAttribute="height" constant="45" id="Cd6-5E-kwN"/>
                             <constraint firstItem="r9h-Zt-YtK" firstAttribute="top" secondItem="OZs-hb-36M" secondAttribute="top" id="Yrr-no-zz7"/>
                             <constraint firstItem="49E-Kt-bTS" firstAttribute="top" secondItem="r9h-Zt-YtK" secondAttribute="bottom" constant="50" id="oAJ-jC-Cmz"/>
                         </constraints>
@@ -749,7 +762,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yNR-3d-Iye" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1932.5" y="-371.5"/>
+            <point key="canvasLocation" x="1232.5" y="-413.5"/>
         </scene>
         <!--Goals-->
         <scene sceneID="K1e-Hx-gCU">
@@ -770,7 +783,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fGO-py-6Hc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1932.5" y="1188.5"/>
+            <point key="canvasLocation" x="1232.5" y="1208.5"/>
         </scene>
         <!--Add Activity-->
         <scene sceneID="SmT-FC-tpZ">
@@ -807,7 +820,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Cv-4G-XIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3006.5" y="-371.5"/>
+            <point key="canvasLocation" x="2519.5" y="-413.5"/>
         </scene>
     </scenes>
     <resources>
